fix: style error and spacing. feat: submit on enter

--- a/packages/donate-button/src/components/EveryMonth/style.css
+++ b/packages/donate-button/src/components/EveryMonth/style.css
@@ -128,8 +128,8 @@
 }
 
 .t-error {
-  font-size: 1rem;
-  line-height: 1.25;
+  font-size: .75rem;
+  line-height: 1;
   color: orangered
 }
 
